--- a/OwlTIME/app/src/main/res/layout/item_event.xml
+++ b/OwlTIME/app/src/main/res/layout/item_event.xml
@@ -5,13 +5,26 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
+
+        <TextView
+            android:id="@+id/date"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Looks good"
+            android:gravity="center"
+            android:paddingTop="@dimen/activity_vertical_margin"/>
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="horizontal">
 
             <TextView
-                android:id="@+id/name"
+                android:id="@+id/title"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
@@ -21,10 +34,10 @@
                 android:paddingVertical="@dimen/activity_vertical_margin" />
 
             <TextView
-                android:id="@+id/final_score"
+                android:id="@+id/subject"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_weight="3"
+                android:layout_weight="1"
                 android:gravity="end"
                 android:text="Looks good"
                 android:textColor="@color/secondaryColor"
@@ -35,5 +48,7 @@
                 android:background="?android:attr/selectableItemBackground"/>
 
         </LinearLayout>
+
+    </LinearLayout>
 
 </com.google.android.material.card.MaterialCardView>
